k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brcai
  labels:
    name: avatar-generator
    app: avatar-generator
