k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avatar-generator-service
  namespace: avatar-generator
  labels:
    app: avatar-generator
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: avatar-generator
